camel3-cdi/cdi-error-handling/misc/manifests/kubernetes-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdi-error-handling-service
  labels:
    app: cdi-error-handling-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: prometheus
    port: 8888
    targetPort: 8888
  - name: jmx
    port: 16000
    targetPort: 16000
  selector:
    app: cdi-error-handling

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cdi-error-handling
    version: v1
  name: cdi-error-handling
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cdi-error-handling
      version: v1
  template:
    metadata:
      labels:
        app: cdi-error-handling
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/"
        prometheus.io/port: "8888"
    spec:
      containers:
      - image: emmerson/cdi-error-handling:1.2.0
        imagePullPolicy: IfNotPresent
        name: cdi-error-handling
        ports:
        - containerPort: 8080
        - containerPort: 8888
        - containerPort: 16000
      dnsPolicy: ClusterFirst
      restartPolicy: Always
