camel3-cdi/cdi-error-handling/misc/manifests/kubernetes-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ceh-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "ceh.istio.com"


---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ceh-virtualservice
spec:
  hosts:
  - "ceh.istio.com"
  gateways:
  - ceh-gateway
  http:
  - name: "cdi_error_hanling_service"
    match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 8080
        host: cdi-error-handling-service
